# todoTaskRunner

./: .gitignore  LICENSE  Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/include/: split.h  task.h  timeutils.h  todolist.h
src/libs/: CMakeLists.txt  tasksEdit.cpp  tasksRunner.cpp
src/tests/: CMakeLists.txt  todocpp_test.cpp
toolchain/: package.json  testsUnit.js  watchApp.js
